--- a/app/src/main/res/layout/activity_encounters_main.xml
+++ b/app/src/main/res/layout/activity_encounters_main.xml
@@ -22,7 +22,7 @@
         app:swipeThreshold="0.75"
         app:translationDiff="12"
         app:scaleDiff="0.02"
-        app:stackFrom="bottom"
+        app:stackFrom="top"
         app:elevationEnabled="true"
         app:swipeEnabled="true"
         app:swipeDirection="horizontal"
@@ -47,6 +47,7 @@
         <ImageView
             android:src="@drawable/forbidden_mark75"
             android:layout_width="0dp"
+            android:id="@+id/forbiddenMark"
             android:scaleX="0.9"
             android:scaleY="0.9"
             android:layout_weight="1"
@@ -55,6 +56,7 @@
         <ImageView
             android:src="@drawable/undo75"
             android:layout_width="0dp"
+            android:id="@+id/undoButton"
             android:layout_weight="1"
             android:layout_height="30dp" />
 
@@ -62,6 +64,7 @@
         <ImageView
             android:src="@drawable/close_envelope5"
             android:layout_width="0dp"
+            android:id="@+id/closeEnvelope"
             android:layout_weight="1"
             android:layout_height="30dp" />
 
@@ -71,6 +74,7 @@
 
             android:src="@drawable/star75"
             android:layout_width="0dp"
+            android:id="@+id/starInEncounters"
             android:scaleY="1.1"
             android:scaleX="1.1"
             android:layout_weight="1"
