--- a/app/src/main/res/layout/custom_row_news_item.xml
+++ b/app/src/main/res/layout/custom_row_news_item.xml
@@ -1,61 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:padding="5dp"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="#ffffff"
+    app:cardCornerRadius="10dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="5sp"
+        android:orientation="horizontal">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/smallTextView"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"/>
-
-        <ImageView
-            android:layout_marginBottom="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round"
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView"
-            android:layout_below="@id/smallTextView"
-            android:layout_centerHorizontal="true"/>
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:elevation="10dp"
+            android:scaleType="fitXY"
+            android:layout_margin="5sp"
+            android:src="@drawable/bg_gradient"
+            app:riv_corner_radius="10dp"/>
 
-        <TextView
-            android:background="#006699"
-            android:gravity="center"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Large Text"
-            android:id="@+id/largeTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/imageView"/>
+            android:layout_height="105dp"
+            android:orientation="vertical"
+            android:layout_margin="5sp">
+
+            <TextView
+                android:id="@+id/largeTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5sp"
+                android:text="Large Text"
+                android:textColor="#000000"
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Meduim Text"
-            android:layout_below="@id/largeTextView"
-            android:id="@+id/mediumTextView"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            />
+            <TextView
+                android:id="@+id/mediumTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5sp"
+                android:text="Medium Text"
+                android:textColor="#000000"
+                android:textSize="12sp" />
 
 
+        </LinearLayout>
 
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
