--- a/app/src/main/res/layout/overlay_right.xml
+++ b/app/src/main/res/layout/overlay_right.xml
@@ -11,11 +11,11 @@
     app:cardUseCompatPadding="true">
 
     <ImageView
-        android:scaleX="1.5"
-        android:scaleY="1.5"
+        android:scaleX="0.65"
+        android:scaleY="0.65"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/star_100"/>
+        android:src="@drawable/star512"/>
 
 </android.support.v7.widget.CardView>
