--- a/app/src/main/res/layout/directorygridadapter.xml
+++ b/app/src/main/res/layout/directorygridadapter.xml
@@ -5,18 +5,19 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="8sp">
+    android:layout_margin="15sp">
 
     <ImageView
         android:layout_width="60dp"
-
+        android:layout_gravity="center"
         android:layout_height="60dp"
         android:id="@+id/imgview"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:gravity="center"
+        android:textColor="#ffffff"
         android:id="@+id/txtview"/>
 
 </LinearLayout>
