--- a/app/src/main/res/layout/cell_content_layout.xml
+++ b/app/src/main/res/layout/cell_content_layout.xml
@@ -6,7 +6,7 @@
     android:visibility="gone">
 
     <!-- content header line -->
-    <RelativeLayout
+   <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bgContentTop"
@@ -19,10 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/order_id_mock"
+            android:text="Chennai Silks"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-
+<!--
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/menu_icon" />
+            android:src="@drawable/menu_icon" />-->
 
     </RelativeLayout>
 
@@ -53,7 +53,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/head_image" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/head_image_left_text"
             style="@style/ContentImageBadgeText"
             android:layout_width="wrap_content"
@@ -90,9 +90,9 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/head_image_right_text"
             android:layout_alignStart="@id/head_image_right_text"
-            android:text="@string/weight_badge" />
+            android:text="@string/weight_badge" />-->
 
-        <TextView
+      <!--  <TextView
             android:id="@+id/head_image_center_text"
             style="@style/ContentImageBadgeText"
             android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/head_image_center_text"
             android:layout_alignStart="@id/head_image_center_text"
-            android:text="@string/pledge_badge" />
+            android:text="@string/pledge_badge" />-->
 
 
     </RelativeLayout>
@@ -159,31 +159,32 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/content_rating_stars"
+            <TextView
+                android:id="@+id/content_phoneno_view"
+                android:text="9876543210"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@id/content_name_view"
-                android:layout_below="@id/content_name_view"
-                android:src="@drawable/stars" />
-
+                android:layout_below="@id/content_name_view" />
+<!--
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/content_rating_stars"
+                android:layout_alignBottom="@+id/content_phoneno_view"
                 android:layout_marginBottom="-2dp"
                 android:layout_marginStart="3dp"
-                android:layout_toEndOf="@id/content_rating_stars"
+                android:layout_toEndOf="@id/content_phoneno_view"
                 android:text="@string/rating_mock"
                 android:textColor="@color/contentBadgeTitle"
-                android:textSize="12sp" />
-
+                android:textSize="12sp" />-->
+<!--
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/arrow" />
+                android:src="@drawable/arrow" />-->
 
         </RelativeLayout>
 
@@ -208,7 +209,7 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/content_from_badge"
+                    android:id="@+id/content_from_date"
                     style="@style/ContentMainBadgeTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -216,15 +217,16 @@
                     android:text="@string/from_badge" />
 
                 <TextView
-                    android:id="@+id/content_from_address_1"
+                    android:id="@+id/content_from_date_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_from_badge"
-                    android:layout_below="@id/content_from_badge"
-                    android:text="@string/content_from1_mock"
+                    android:layout_alignStart="@id/content_from_date"
+                    android:layout_below="@id/content_from_date"
+                    android:text="23/10/2017"
                     android:textColor="@color/mainTextColor"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+<!--
 
                 <TextView
                     android:id="@+id/content_from_address_2"
@@ -235,6 +237,7 @@
                     android:text="@string/content_from2_mock"
                     android:textColor="@color/mainTextColor"
                     android:textSize="14sp" />
+-->
 
             </RelativeLayout>
 
@@ -244,7 +247,7 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/content_to_badge"
+                    android:id="@+id/content_to_date"
                     style="@style/ContentMainBadgeTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -252,32 +255,32 @@
                     android:text="@string/to_badge" />
 
                 <TextView
-                    android:id="@+id/content_to_address_1"
+                    android:id="@+id/content_to_date_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_to_badge"
-                    android:layout_below="@id/content_to_badge"
-                    android:text="@string/content_to1_mock"
+                    android:layout_alignStart="@id/content_to_date"
+                    android:layout_below="@id/content_to_date"
+                    android:text="20/02/2018"
                     android:textColor="@color/mainTextColor"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/content_to_address_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_to_address_1"
-                    android:layout_below="@id/content_to_address_1"
-                    android:text="@string/content_to2_mock"
-                    android:textColor="@color/mainTextColor"
-                    android:textSize="14sp" />
+                <!--<TextView-->
+                    <!--android:id="@+id/content_to_address_2"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignStart="@id/content_to_address_1"-->
+                    <!--android:layout_below="@id/content_to_address_1"-->
+                    <!--android:text="@string/content_to2_mock"-->
+                    <!--android:textColor="@color/mainTextColor"-->
+                    <!--android:textSize="14sp" />-->
 
-                <ImageView
+                <!--<ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/arrow" />
+                    android:src="@drawable/arrow" />-->
 
             </RelativeLayout>
 
@@ -304,25 +307,25 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/content_delivery_date_badge"
+                    android:id="@+id/content_project_desc_badge"
                     style="@style/ContentMainBadgeTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:text="@string/delivery_date_badge" />
+                    android:text="PROJECT DESCRIPTION" />
 
                 <TextView
-                    android:id="@+id/content_delivery_time"
+                    android:id="@+id/content_project_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_delivery_date_badge"
-                    android:layout_below="@id/content_delivery_date_badge"
-                    android:text="@string/delivery_time_mock"
+                    android:layout_alignStart="@id/content_project_desc_badge"
+                    android:layout_below="@id/content_project_desc_badge"
+                    android:text="bbadhakskdjasdklasjdafhasdjsalkdaladkasjdlsajdafasdasdlasdjasdas"
                     android:textColor="@color/mainTextColor"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
+<!--                <TextView
                     android:id="@+id/content_delivery_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -330,44 +333,44 @@
                     android:layout_below="@id/content_delivery_time"
                     android:text="@string/delivery_date_mock"
                     android:textColor="@color/mainTextColor"
-                    android:textSize="14sp" />
+                    android:textSize="14sp" />-->
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+            <!--<RelativeLayout-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1">-->
 
-                <TextView
-                    android:id="@+id/content_deadline_badge"
-                    style="@style/ContentMainBadgeTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/deadline_badge" />
+                <!--<TextView-->
+                    <!--android:id="@+id/content_deadline_badge"-->
+                    <!--style="@style/ContentMainBadgeTitle"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:text="@string/deadline_badge" />-->
 
-                <TextView
-                    android:id="@+id/content_deadline_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_deadline_badge"
-                    android:layout_below="@id/content_deadline_badge"
-                    android:text="@string/deadline_time_mock"
-                    android:textColor="@color/mainTextColor"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                <!--<TextView-->
+                    <!--android:id="@+id/content_deadline_time"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignStart="@id/content_deadline_badge"-->
+                    <!--android:layout_below="@id/content_deadline_badge"-->
+                    <!--android:text="@string/deadline_time_mock"-->
+                    <!--android:textColor="@color/mainTextColor"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:textStyle="bold" />-->
 
-                <TextView
-                    android:id="@+id/content_deadline_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignStart="@id/content_deadline_time"
-                    android:layout_below="@id/content_deadline_time"
-                    android:text=""
-                    android:textColor="@color/mainTextColor"
-                    android:textSize="14sp" />
-            </RelativeLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/content_deadline_date"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignStart="@id/content_deadline_time"-->
+                    <!--android:layout_below="@id/content_deadline_time"-->
+                    <!--android:text=""-->
+                    <!--android:textColor="@color/mainTextColor"-->
+                    <!--android:textSize="14sp" />-->
+            <!--</RelativeLayout>-->
 
         </LinearLayout>
 
@@ -379,7 +382,7 @@
             android:layout_marginTop="16dp"
             android:background="@color/btnRequest"
             android:padding="10dp"
-            android:text="@string/request_btn_text"
+            android:text="APPLY"
             android:textAlignment="center"
             android:textColor="@color/mainTextColor"
             android:textSize="20sp" />
@@ -390,6 +393,7 @@
             android:layout_marginTop="4dp"
             android:text="@string/btn_annotation_mock"
             android:textAlignment="center"
+            android:visibility="invisible"
             android:textColor="@color/contentBadgeTitle"
             android:textSize="12sp" />
 
