--- a/app/src/main/res/layout/activity_subscribe_pop_up.xml
+++ b/app/src/main/res/layout/activity_subscribe_pop_up.xml
@@ -9,6 +9,7 @@
     tools:context="com.twenty.four.crafts.SubscribePopUp">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/Subscribe"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -17,6 +18,7 @@
         android:src="@drawable/logo"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/subscribe_text"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -28,6 +30,7 @@
         />
 
     <TextView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Subscription"
