Login Icons + Minor Tweaks

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -13,11 +13,13 @@
 
     <EditText
         android:background="@drawable/bubble"
-        android:hint="Enter your registered Email id"
+        android:hint="Enter your registered Email ID"
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:paddingLeft="32dp"
+        android:drawableStart="@drawable/login_email"
+        android:drawablePadding="10dp"
+        android:paddingLeft="20dp"
         android:id="@+id/forgot_password_edittext"
         android:layout_centerInParent="true"/>
 
