--- a/app/src/main/res/layout/activity_encounters_main.xml
+++ b/app/src/main/res/layout/activity_encounters_main.xml
@@ -58,6 +58,7 @@
             android:layout_width="0dp"
             android:id="@+id/undoButton"
             android:layout_weight="1"
+            android:scaleX="1.2"
             android:layout_height="30dp" />
 
 
@@ -66,6 +67,8 @@
             android:layout_width="0dp"
             android:id="@+id/closeEnvelope"
             android:layout_weight="1"
+            android:scaleY="1.1"
+            android:scaleX="1.1"
             android:layout_height="30dp" />
 
 
