--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,8 @@
         android:layout_marginRight="30dp"
         android:inputType="textEmailAddress"
         android:hint="Email"
+        android:drawableStart="@drawable/login_email"
+        android:drawablePadding="10dp"
         android:paddingLeft="20dp" />
 
 
@@ -54,6 +56,8 @@
         android:background="@drawable/bubble"
         android:paddingRight="10dp"
         android:hint="Password"
+        android:drawableStart="@drawable/ic_lock_black_24dp"
+        android:drawablePadding="10dp"
         android:paddingLeft="20dp"
         />
 
