--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/button_round"
         android:id="@+id/forgot_password_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:text="SUBMIT"
         android:layout_below="@id/forgot_password_edittext"
