--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -16,7 +16,8 @@
         android:id="@+id/openinggif"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/splashlogo"
