--- a/app/src/main/res/drawable/b1.xml
+++ b/app/src/main/res/drawable/b1.xml
@@ -6,8 +6,5 @@
         android:endColor="#3a6073"
         android:angle="45"/>
     <corners
-    android:bottomLeftRadius="13dp"
-    android:bottomRightRadius="13dp"
-    android:topLeftRadius="13dp"
-    android:topRightRadius="13dp" />
+    android:radius="13dp"/>
 </shape>
