--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,7 +130,7 @@
         <item name="android:actionMenuTextColor">@color/color_option_menu</item>
     </style>
 
-
+    <!--Alert Dialog-->
     <style name="AlertDialog">
         <item name="android:radius">13dp</item>
         <item name="android:background">@drawable/b1</item>
